[project]
name = "rm-screen-share"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "google-genai>=1.16.1",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "markdown-pdf>=1.7",
    "mss>=10.0.0",
    "pillow>=11.2.1",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pypandoc>=1.15",
    "pypdf>=5.5.0",
    "sqlite-vss>=0.1.2",
]
